{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 98,
  "lineage": "d45af6fb-b8a5-4a92-10bc-e4b847aabe88",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jh-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:internet-gateway/igw-07ea546535049a992",
            "id": "igw-07ea546535049a992",
            "owner_id": "807207935784",
            "tags": {
              "Name": "jh-IGW"
            },
            "tags_all": {
              "Name": "jh-IGW"
            },
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "dependencies": [
            "aws_vpc.jh-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jh-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:loadbalancer/app/jh-terraform-asg-lb/647071bdf25d873c",
            "arn_suffix": "app/jh-terraform-asg-lb/647071bdf25d873c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jh-terraform-asg-lb-830458608.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:loadbalancer/app/jh-terraform-asg-lb/647071bdf25d873c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jh-terraform-asg-lb",
            "security_groups": [
              "sg-04b6d4eb20bbaccb9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06b0db15408fabb08"
              },
              {
                "subnet_id": "subnet-0b05035ecd74c88b9"
              }
            ],
            "subnets": [
              "subnet-06b0db15408fabb08",
              "subnet-0b05035ecd74c88b9"
            ],
            "vpc_id": "vpc-01a860ba9b8c567dc",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.jh-public-sg",
            "aws_subnet.jh-private-subnet-1",
            "aws_subnet.jh-private-subnet-2",
            "aws_vpc.jh-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jh-terraform-asg-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:listener/app/jh-terraform-asg-lb/647071bdf25d873c/d1de81b1ce42211d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:targetgroup/jh-terraform-asg-lb-target-group/28e3737a0567c4f6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:listener/app/jh-terraform-asg-lb/647071bdf25d873c/d1de81b1ce42211d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:loadbalancer/app/jh-terraform-asg-lb/647071bdf25d873c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jh-lb",
            "aws_lb_target_group.jh-terraform-asg-lb-target-group",
            "aws_security_group.jh-public-sg",
            "aws_subnet.jh-private-subnet-1",
            "aws_subnet.jh-private-subnet-2",
            "aws_vpc.jh-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jh-terraform-asg-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:targetgroup/jh-terraform-asg-lb-target-group/28e3737a0567c4f6",
            "arn_suffix": "targetgroup/jh-terraform-asg-lb-target-group/28e3737a0567c4f6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807207935784:targetgroup/jh-terraform-asg-lb-target-group/28e3737a0567c4f6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jh-terraform-asg-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "dependencies": [
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jh-private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:security-group/sg-0bd8208a193919ace",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bd8208a193919ace",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b6d4eb20bbaccb9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "jh-private-sg",
            "name_prefix": "",
            "owner_id": "807207935784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jh-private-sg"
            },
            "tags_all": {
              "Name": "jh-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jh-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:security-group/sg-04b6d4eb20bbaccb9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04b6d4eb20bbaccb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jh-public-sg",
            "name_prefix": "",
            "owner_id": "807207935784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jh-public-sg"
            },
            "tags_all": {
              "Name": "jh-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jh-private-sg-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1073020924",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd8208a193919ace",
            "self": false,
            "source_security_group_id": "sg-04b6d4eb20bbaccb9",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jh-private-sg",
            "aws_security_group.jh-public-sg",
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jh-public-sg-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2030806512",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04b6d4eb20bbaccb9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jh-public-sg",
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jh-public-sg-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3481401413",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04b6d4eb20bbaccb9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jh-public-sg",
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jh-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:subnet/subnet-06b0db15408fabb08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b0db15408fabb08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807207935784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jh-private-subnet-1"
            },
            "tags_all": {
              "Name": "jh-private-subnet-1"
            },
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "dependencies": [
            "aws_vpc.jh-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jh-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:subnet/subnet-0b05035ecd74c88b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b05035ecd74c88b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807207935784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jh-private-subnet-2"
            },
            "tags_all": {
              "Name": "jh-private-subnet-2"
            },
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "dependencies": [
            "aws_vpc.jh-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jh-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:subnet/subnet-04ed429b179af83b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ed429b179af83b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807207935784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jh-public-subnet-1"
            },
            "tags_all": {
              "Name": "jh-public-subnet-1"
            },
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "dependencies": [
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jh-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:subnet/subnet-003e10e6aa14e7c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003e10e6aa14e7c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807207935784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jh-public-subnet-2"
            },
            "tags_all": {
              "Name": "jh-public-subnet-2"
            },
            "vpc_id": "vpc-01a860ba9b8c567dc"
          },
          "dependencies": [
            "aws_vpc.jh-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jh-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807207935784:vpc/vpc-01a860ba9b8c567dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1e71b5aa76c8e4f",
            "default_route_table_id": "rtb-0fe4657fbcb55315c",
            "default_security_group_id": "sg-0fdf955e304c9673a",
            "dhcp_options_id": "dopt-03691ebab98ff8f1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01a860ba9b8c567dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe4657fbcb55315c",
            "owner_id": "807207935784",
            "tags": {
              "Name": "JH-vpc"
            },
            "tags_all": {
              "Name": "JH-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}